# evaluating-student-writing

./: .gitignore  .pre-commit-config.yaml  README.md  export.py  main.py  pre-commit-config.yml  predict.py  predict_onnx.py  predict_triton.py  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/experiment/: mlflow.yaml
configs/export/: onnx.yaml
configs/features/: tfidf.yaml  tokenizer.yaml
configs/model/: bigbird.yaml  xgboost.yaml
configs/paths/: default.yaml
configs/preprocessing/: sentence.yaml
configs/training/: ner.yaml
configs/triton/: default.yaml
data/: .gitignore  final_results.dvc  plots.dvc  test.dvc  train.csv.dvc  train.dvc
evaluating_student_writing/: dvc.py
evaluating_student_writing/baseline/: data.py  infer.py  train.py  utils.py
evaluating_student_writing/lightning/: constants.py  data.py  export.py  infer.py  infer_onnx.py  infer_triton.py  model.py  plot_utils.py  report.py  train.py  utils.py
metrics/: __init__.py  base.py  competition_f1.py  span_exact_match.py  span_jaccard.py  token_f1.py
models/: .gitignore  baseline.dvc  bigbird.dvc
notebooks/: .gitignore  data_analysis.ipynb.dvc  pytorch-bigbird-ner-cv-0-615.ipynb.dvc
triton_server/: docker-compose.yaml
triton_server/model_repository/bigbird_ner/: config.pbtxt
