[project]
name = "evaluating-student-writing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "dvc[gdrive]>=3.67.1",
    "pre-commit>=4.6.0",
]
notebooks = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
