[project]
name = "evaluating-student-writing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.8.0",
    "mlflow>=3.12.0",
    "nltk>=3.9.1",
    "pandas>=2.2.0,<3",
    "pytorch-lightning>=2.0.0",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "xgboost>=2.1.4",
]

[dependency-groups]
dev = [
    "dvc[gdrive]>=3.67.1",
    "pre-commit>=4.6.0",
]
notebooks = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
